Добавлена карусель статей

--- a/articles2.html
+++ b/articles2.html
@@ -97,83 +97,144 @@
 				</header>
 
 
-				<section class="where_buy">
+				<section class="articles">
 					<div class="cont">
-						<div class="page_head">
-							<h1 class="page_title">МЫ ПРЕДСТАВЛЕНЫ</h1>
-						</div>
+						<h1 class="page_title">Статьи</h1>
 
-						<div class="row">
-							<a href="/" class="item" target="_blank" rel="noopener nofollow">
-								<img data-src="images/wheer_buy_logo1.png" alt="" class="lazyload">
-							</a>
+						<div class="swiper">
+							<div class="swiper-wrapper">
+								<div class="swiper-slide">
+									<div class="article">
+										<a href="/" class="thumb">
+											<img data-src="images/article_thumb.jpg" alt="" class="swiper-lazy">
+										</a>
 
-							<a href="/" class="item" target="_blank" rel="noopener nofollow">
-								<img data-src="images/wheer_buy_logo2.png" alt="" class="lazyload">
-							</a>
+										<div class="info">
+											<div class="name">
+												<a href="/">Одна из важных задач для достижения любой цели – понимание</a>
+											</div>
 
-							<a href="/" class="item" target="_blank" rel="noopener nofollow">
-								<img data-src="images/wheer_buy_logo3.png" alt="" class="lazyload">
-							</a>
+											<div class="desc">Одна из важных задач для достижения любой цели – понять, какое желание человек хочет реализовать. Одна из важных задач для достижения любой цели – понять, какое желание человек хочет реализовать.</div>
 
-							<a href="/" class="item" target="_blank" rel="noopener nofollow">
-								<img data-src="images/wheer_buy_logo4.png" alt="" class="lazyload">
-							</a>
+											<div class="link">
+												<a href="/">Подробнее</a>
+											</div>
+										</div>
+									</div>
+								</div>
 
-							<a href="/" class="item" target="_blank" rel="noopener nofollow">
-								<img data-src="images/wheer_buy_logo5.png" alt="" class="lazyload">
-							</a>
+								<div class="swiper-slide">
+									<div class="article">
+										<a href="/" class="thumb">
+											<img data-src="images/article_thumb.jpg" alt="" class="swiper-lazy">
+										</a>
 
-							<a href="/" class="item" target="_blank" rel="noopener nofollow">
-								<img data-src="images/wheer_buy_logo6.png" alt="" class="lazyload">
-							</a>
+										<div class="info">
+											<div class="name">
+												<a href="/">Одна из важных задач для достижения любой цели – понимание</a>
+											</div>
 
-							<a href="/" class="item" target="_blank" rel="noopener nofollow">
-								<img data-src="images/wheer_buy_logo7.png" alt="" class="lazyload">
-							</a>
+											<div class="desc">Одна из важных задач для достижения любой цели – понять, какое желание человек хочет реализовать.</div>
 
-							<a href="/" class="item" target="_blank" rel="noopener nofollow">
-								<img data-src="images/wheer_buy_logo8.png" alt="" class="lazyload">
-							</a>
+											<div class="link">
+												<a href="/">Подробнее</a>
+											</div>
+										</div>
+									</div>
+								</div>
 
-							<a href="/" class="item" target="_blank" rel="noopener nofollow">
-								<img data-src="images/wheer_buy_logo9.png" alt="" class="lazyload">
-							</a>
+								<div class="swiper-slide">
+									<div class="article">
+										<a href="/" class="thumb">
+											<img data-src="images/article_thumb.jpg" alt="" class="swiper-lazy">
+										</a>
 
-							<a href="/" class="item" target="_blank" rel="noopener nofollow">
-								<img data-src="images/wheer_buy_logo10.png" alt="" class="lazyload">
-							</a>
+										<div class="info">
+											<div class="name">
+												<a href="/">Одна из важных задач для достижения любой цели – понимание</a>
+											</div>
 
-							<a href="/" class="item" target="_blank" rel="noopener nofollow">
-								<img data-src="images/wheer_buy_logo11.png" alt="" class="lazyload">
-							</a>
+											<div class="desc">Одна из важных задач для достижения любой цели – понять, какое желание человек хочет реализовать.</div>
 
-							<a href="/" class="item" target="_blank" rel="noopener nofollow">
-								<img data-src="images/wheer_buy_logo12.png" alt="" class="lazyload">
-							</a>
+											<div class="link">
+												<a href="/">Подробнее</a>
+											</div>
+										</div>
+									</div>
+								</div>
 
-							<a href="/" class="item" target="_blank" rel="noopener nofollow">
-								<img data-src="images/wheer_buy_logo13.png" alt="" class="lazyload">
-							</a>
+								<div class="swiper-slide">
+									<div class="article">
+										<a href="/" class="thumb">
+											<img data-src="images/article_thumb.jpg" alt="" class="swiper-lazy">
+										</a>
 
-							<a href="/" class="item" target="_blank" rel="noopener nofollow">
-								<img data-src="images/wheer_buy_logo14.png" alt="" class="lazyload">
-							</a>
+										<div class="info">
+											<div class="name">
+												<a href="/">Одна из важных задач для достижения любой цели – понимание</a>
+											</div>
 
-							<a href="/" class="item" target="_blank" rel="noopener nofollow">
-								<img data-src="images/wheer_buy_logo15.png" alt="" class="lazyload">
-							</a>
+											<div class="desc">Одна из важных задач для достижения любой цели – понять, какое желание человек хочет реализовать. Одна из важных задач для достижения любой цели – понять, какое желание человек хочет реализовать.</div>
 
-							<a href="/" class="item" target="_blank" rel="noopener nofollow">
-								<img data-src="images/wheer_buy_logo16.png" alt="" class="lazyload">
-							</a>
+											<div class="link">
+												<a href="/">Подробнее</a>
+											</div>
+										</div>
+									</div>
+								</div>
+
+								<div class="swiper-slide">
+									<div class="article">
+										<a href="/" class="thumb">
+											<img data-src="images/article_thumb.jpg" alt="" class="swiper-lazy">
+										</a>
+
+										<div class="info">
+											<div class="name">
+												<a href="/">Одна из важных задач для достижения любой цели – понимание</a>
+											</div>
+
+											<div class="desc">Одна из важных задач для достижения любой цели – понять, какое желание человек хочет реализовать.</div>
+
+											<div class="link">
+												<a href="/">Подробнее</a>
+											</div>
+										</div>
+									</div>
+								</div>
+
+								<div class="swiper-slide">
+									<div class="article">
+										<a href="/" class="thumb">
+											<img data-src="images/article_thumb.jpg" alt="" class="swiper-lazy">
+										</a>
+
+										<div class="info">
+											<div class="name">
+												<a href="/">Одна из важных задач для достижения любой цели – понимание</a>
+											</div>
+
+											<div class="desc">Одна из важных задач для достижения любой цели – понять, какое желание человек хочет реализовать.</div>
+
+											<div class="link">
+												<a href="/">Подробнее</a>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+
+							<div class="swiper-button-prev"></div>
+							<div class="swiper-button-next"></div>
+
+							<div class="swiper-pagination"></div>
 						</div>
 					</div>
 				</section>
 			</div>
 
 
-			<footer>
+			<footer class="bg">
 				<div class="info">
 					<div class="cont row">
 						<div class="col_left">
