--- a/index2.html
+++ b/index2.html
@@ -28,6 +28,8 @@
 
 		<!-- Подключение файлов стилей -->
 		<link rel="stylesheet" href="css/fancybox.css" async>
+		<link rel="stylesheet" href="css/swiper-bundle.min.css" async>
+		<link rel="stylesheet" href="css/swiper.css" async>
 		<link rel="stylesheet" href="css/styles.css" async>
 
 		<link rel="stylesheet" href="css/response_1899.css" media="print, (max-width: 1899px)" async>
@@ -364,6 +366,7 @@
 
 		<!-- Подключение javascript файлов -->
 		<script src="js/jquery-3.5.0.min.js"></script>
+		<script src="js/swiper-bundle.min.js"></script>
 		<script src="js/inputmask.min.js"></script>
 		<script src="js/fancybox.min.js"></script>
 		<script src="js/sticky-kit.min.js"></script>
